# P14-NewsFoundry

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_DOUBLE_DATA_BUG.md  ARCHITECTURE_DIAGRAM.md  CODE_REVIEW_RESULTS.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPARISON.md  README.md
.config/: biome.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai-code-review.yml  backend-tests.yml  dependabot-auto-merge.yml  docs-build.yml  frontend-tests.yml  playwright-e2e.yml  pr-autolink-issue.yml  pr-issue-check.yml  prod-smoke-test.yml  release.yml
OC-P14/.obsidian/: workspace.json
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260510_001_user_schema_baseline.py  20260626_001_add_demo_account_limits.py  6cb358ed07f8_add_system_prompt_to_chat.py  711b9f408d71_add_topnewscontext_table.py  a1b2c3d4e5f6_add_press_review_to_chat.py  dcc84e175202_add_loaded_articles_to_chat.py  f112a69a9208_add_review_chat_message_tables.py
backend/docs/: mkdocs.yml
backend/docs/docs/: api-reference.md  authentication.md  changelog.md  getting-started.md  index.md
backend/scripts/: reset.py  seed.py
backend/src/: bootstrap.py  main.py  telemetry.py
backend/src/api/: authentication_endpoints.py  chat_endpoints.py  health_endpoints.py  mlflow_proxy_endpoints.py  models.py  news_endpoints.py  review_endpoints.py  router.py
backend/src/api/dependencies/: demo_limits.py
backend/src/core/: auth.py  config.py  fixtures.py  llm_client.py  llm_provider.py  middleware.py  observability.py  prompts.py  security.py
backend/src/core/agent/: __init__.py  context.py  press_review_agent.py  search_agent.py  tools.py
backend/src/core/news/: __init__.py  labeler.py  reducer.py  search.py  service.py
backend/src/core/rag/: indexer.py
backend/src/core/worldnewsapi/: __init__.py  mock_data.py  worldnews.py
backend/src/database/: crud.py  database.py  models.py
backend/src/utils/: utils.py
backend/tests/: conftest.py  test_agent_tools.py  test_authentication.py  test_bootstrap.py  test_chats_authorization.py  test_demo_limits.py  test_exception_handler_responses.py  test_labeler.py  test_llm_client.py  test_news_endpoints.py  test_news_search.py  test_news_service.py  test_observability.py  test_observability_spans.py  test_press_review_agent.py  test_press_review_crud.py  test_press_review_endpoints.py  test_prompt_builder.py  test_rag_indexer.py  test_reducer.py  test_topnewscontext_model.py  test_worldnews.py  wet_test_endpoints.py
docs/: api.md  architecture.md  authentication.md  deployment.md  error-handling.md  index.md  performance.md  prompts.md  technical-choices.md  testing.md
docs-site/: astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.tsconfig.json
docs-site/typedoc-entrypoints/: actions.ts  components.ts  lib.ts  service.ts
docs/plans/: 2026-06-14-playwright-e2e-setup.md  2026-06-14-rag-llamaindex.md  2026-06-14-vitest-setup.md  2026-06-15-release-pipeline.md  2026-06-22-observability-mlflow-design.md  2026-06-22-observability-mlflow-plan.md
frontend/: .gitignore  biome.json  components.json  kubb.config.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.edge.config.ts  tsconfig.json  vitest.config.ts
(+120 files in other folders)
