[project]
name = "backend"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlmodel>=0.0.38",
    "psycopg2-binary>=2.9.12",
    "bcrypt>=5.0.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.28",
    "alembic>=1.18.4",
    "openai>=2.36.0",
    "sentry-sdk>=2.60.0",
    "openai-agents>=0.17.4",
    "httpx[socks]>=0.28.1",
    "worldnewsapi>=2.2.0",
    "llama-index-core>=0.12",
    "llama-index-embeddings-fastembed>=0.2",
    "fastembed>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[dependency-groups]
dev = ["mkdocs>=1.6.1", "pytest>=9.0.3", "pytest-asyncio>=1.0.0", "httpx>=0.28.1", "ruff>=0.15.13"]

[tool.pyright]
pythonVersion = "3.13"
extraPaths = ["src"]
