[project]
name = "backend"
version = "0.12.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlmodel>=0.0.38",
    "psycopg2-binary>=2.9.12",
    "bcrypt>=5.0.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.28",
    "alembic>=1.18.4",
    "openai>=2.36.0",
    "sentry-sdk>=2.60.0",
    "openai-agents>=0.17.4",
    "httpx[socks]>=0.28.1",
    "worldnewsapi>=2.2.0",
    "llama-index-core>=0.12",
    "llama-index-embeddings-fastembed>=0.2",
    "fastembed>=0.4",
    "mlflow>=2.14",
    # opentelemetry-proto<1.26 uses old-style protobuf descriptors incompatible
    # with protobuf>=4; pin to >=1.26 to avoid a TypeError at import time.
    "opentelemetry-proto>=1.26.0",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "openinference-instrumentation-openai>=0.1.52",
    "openinference-instrumentation-openai-agents>=1.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[dependency-groups]
dev = ["mkdocs>=1.6.1", "pytest>=9.0.3", "pytest-asyncio>=1.0.0", "httpx>=0.28.1", "ruff>=0.15.13"]

[tool.pyright]
pythonVersion = "3.13"
extraPaths = ["src"]
